--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <h1 align="center">OneStop</h1>
 
 <table>
@@ -10,6 +7,32 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+
+
+  <script>
+      window.fbAsyncInit = function() {
+          FB.init({
+              appId      : '900774029996323',
+              xfbml      : true,
+              version    : 'v2.3'
+          });
+      };
+
+      (function(d, s, id){
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) {return;}
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js";
+          fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+  <!--<%=# link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>-->
+
+
+
 
   <tbody>
     <% @accounts.each do |account| %>
