--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -25,3 +25,5 @@
 <br>
 
 <%= link_to 'New Account', new_account_path %>
+
+<%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
