added Facebook migration, login to OS first

--- a/app/views/accounts/Facebook SDK for Javascript.html.erb
+++ b/app/views/accounts/Facebook SDK for Javascript.html.erb
@@ -18,3 +18,8 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 </script>
+
+
+
+#devise.rb last row
+#:scope => 'public_profile, email, user_friends', :display => 'popup'
