--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -9,31 +9,6 @@
   </thead>
 
 
-
-
-  <script>
-      window.fbAsyncInit = function() {
-          FB.init({
-              appId      : '900774029996323',
-              xfbml      : true,
-              version    : 'v2.3'
-          });
-      };
-
-      (function(d, s, id){
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) {return;}
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js";
-          fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-  </script>
-
-
-
-
-
-
   <tbody>
     <% @accounts.each do |account| %>
       <tr>
@@ -48,7 +23,10 @@
 
 <br>
 
+<%= link_to 'New Account', new_account_path %><br>
 
-<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
+<%= link_to 'Sign Out', destroy_user_session_path %><br>
 
-<%= link_to 'New Account', new_account_path %>
+<% if user_signed_in? %>
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
+<% end %>
