--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,19 @@
 </head>
 <body>
 
-<!--for Devise-->
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div>
+  <% if user_signed_in? %>
+    <strong><%= current_user.email %></strong>
+    <%= link_to 'Edit Profile', edit_user_registration_path %>
+    <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Sign Up', new_user_registration_path %>
+    <%= link_to 'Login', new_user_session_path %>
+  <% end %>
+</div>
 
+<%= flash[:alert] %>
+<%= flash[:notice] %>
 
 <%= yield %>
 
