--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>BACON</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,6 +25,8 @@
 
 
 <%  if user_signed_in? %>
+
+
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete%><br>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
     <% else %>
