--- a/app/views/accounts/Facebook SDK for Javascript.html.erb
+++ b/app/views/accounts/Facebook SDK for Javascript.html.erb
@@ -1,6 +1,6 @@
+<!--this page is for notes, not used!!-->
+
 <!--#insert directly after opening #<body>-->
-
-
 <script>
     window.fbAsyncInit = function() {
         FB.init({
@@ -23,3 +23,20 @@
 
 #devise.rb last row
 #:scope => 'public_profile, email, user_friends', :display => 'popup'
+
+#devise/shared/links     at end
+<%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+    <%=link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />--!
+    <% end -%>
+<% end -%>
+
+index.html.erb
+<%  if user_signed_in? %>
+    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
+<% else %>
+    <%= link_to 'Sign In', new_user_session_path %><br>
+    <%= link_to 'Sign Up', new_user_registration_path %><br>
+    <%= link_to 'New Account', new_account_path %>
+<% end %>
