--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -25,11 +25,10 @@
 
 
 <%  if user_signed_in? %>
-  <%= link_to 'Sign Out', destroy_user_session_path, method: :delete%><br>
+  <%= button_to 'Sign Out', '/users/sign_out', method: :delete %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
     <% else %>
-    <%= link_to 'Sign In', new_user_session_path %><br>
-    <%= link_to 'Sign Up', new_user_registration_path %><br>
-    <%= link_to 'New Account', new_account_path %><br>
-
+    <%= button_to 'Sign In', '/users/sign_in', method: :get %>
+    <%= button_to 'Sign Up', '/users/sign_up', method: :get %>
+    <%= button_to 'New Account', '/accounts/new', method: :get %>
 <% end %>
