--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -27,8 +27,8 @@
 
 <%  if user_signed_in? %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete%><br>
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %><br>
-    <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+     <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
     <% else %>
     <%= link_to 'Sign In', new_user_session_path %><br>
     <%= link_to 'Sign Up', new_user_registration_path %><br>
