--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,8 +1,1 @@
-
-<p>
-  <strong>Name:</strong>
-  <%= @account.name %>
-</p>
-
-<%= link_to 'Edit', edit_account_path(@account) %> |
-<%= link_to 'Back', accounts_path %>
+<%= render partial: 'show', locals: {account: @account} %>
