--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
 <!--for Devise-->
 <p class="alert"><%= alert %></p>
 <%= yield %>
-
+<!-- NOT SURE IF THIS IS HOW YOU ARE SUPPOSED TO MAKE CUSTOM HRS  -->
+<div id="hr1"></div>
+<br>
 <button type="button"><%= link_to 'Back to Home', root_path %></button>
-
-
 
 <!-- I don't know where to keep this dialog div but it is realy important right now that it is in the app.. -->
 <div id="dialog" title="Information">
